# ec

./: experiments_syntactic.py  extract.py  program.py  pyproject.toml  semantics_experiments.py  syntactic_experiments.py  unit_tests.py
Algorithms/: heap_search.py
dreamcoder/: dreamcoder.py  enumeration.py  grammar.py  pcfg.py
dreamcoder/PCFG/: cfg.py  dsl.py  experiments_syntactic.py  pcfg.py  program.py  type_system.py  unit_tests.py
dreamcoder/PCFG/Algorithms/: a_star.py  bfs.py  dfs.py  heap_search.py  heap_search_naive.py  heap_search_nopruning.py  heap_search_renew.py  hybrid.py  sort_and_add.py  sqrt_sampling.py  threshold_search.py  utils.py
dreamcoder/PCFG/DSL/: circuits.py  deepcoder.py  flashfill.py  list.py  menon.py
results_syntactic/: dataset_3_100.pickle
tmp/: list_0.pickle  list_1.pickle  list_10.pickle  list_100.pickle  list_101.pickle  list_102.pickle  list_103.pickle  list_104.pickle  list_105.pickle  list_106.pickle  list_107.pickle  list_108.pickle  list_109.pickle  list_11.pickle  list_110.pickle  list_111.pickle  list_112.pickle  list_113.pickle  list_114.pickle  list_115.pickle  list_116.pickle  list_117.pickle  list_118.pickle  list_119.pickle  list_12.pickle  list_120.pickle  list_121.pickle  list_122.pickle  list_123.pickle  list_124.pickle  list_125.pickle  list_126.pickle  list_127.pickle  list_128.pickle  list_129.pickle  list_13.pickle  list_130.pickle  list_131.pickle  list_132.pickle  list_133.pickle  (+178 more)
