[tool.poetry]
name = "dream_coder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
dill = "^0.3.4"
vose = {git = "https://github.com/MaxHalford/vose"}
scipy = "^1.7.0"
torch = "^1.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
